--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,19 @@ section {
   margin-top: 0;
 }
 
+.cards-list{
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
 .card {
   width: 175px;
   font-size: 12px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: column;
+  position: relative;
 }
 
 .card--image {
@@ -65,4 +75,36 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
+}
+
+.card--star {
+  height: 14px;
+}
+
+.card--price {
+  margin-top: auto;
+}
+
+section {
+  padding: 20px;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
